[tool.poetry]
name = "secret-note"
version = "0.1.0"
description = "simple web-app for passwords sharing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pycryptodome = "^3.9.8"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
